--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,27 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+* {
+    margin: auto;
+}
+.counter {
+    margin-top: 6rem;
+    background-color: rgb(233, 220, 45);
+    display: flex;
+    flex-wrap: nowrap;
+    width: 50%;
+    min-width: fit-content;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.counter div {
+    background-color: black;
+    color: white;
+    display: flex;
+    padding: 2rem;
+    margin: 1rem;
+    font-size: 8rem;
+    text-align: center;
+    flex-grow: 1;
+}
